2007-09-30 Modified update* methods of Bbox and Interval so they
           work with reversed axes.  Prior to this, trying to
           set the ticks on a reversed axis failed with an
           uninformative error message. - EF

2007-09-30 Applied patches to axes3d to fix index error problem - EF

2007-09-24 Applied Eike Welk's patch reported on mpl-dev on 2007-09-22
           Fixes a bug with multiple plot windows in the qt backend,
           ported the changes to backend_qt4 as well - DSD

2007-09-21 Changed cbook.reversed to yield the same result as the
           python reversed builtin - DSD

2007-09-13 The usetex support in the pdf backend is more usable now,
           so I am enabling it. - JKS

2007-09-12 Fixed a Axes.bar unit bug - JDH

2007-09-10 Made skiprows=1 the default on csv2rec - JDH

2007-09-09 Split out the plotting part of pylab and put it in
           pyplot.py; removed numerix from the remaining pylab.py,
           which imports everything from pyplot.py.  The intention
           is that apart from cleanups, the result of importing
           from pylab is nearly unchanged, but there is the
           new alternative of importing from pyplot to get
           the state-engine graphics without all the numeric
           functions.
           Numpified examples; deleted two that were obsolete;
           modified some to use pyplot. - EF

2007-09-08 Eliminated gd and paint backends - EF

2007-09-06 .bmp file format is now longer an alias for .raw

2007-09-07 Added clip path support to pdf backend. - JKS

2007-09-06 Fixed a bug in the embedding of Type 1 fonts in PDF.
           Now it doesn't crash Preview.app. - JKS

2007-09-06 Refactored image saving code so that all GUI backends can
           save most image types.  See FILETYPES for a matrix of
           backends and their supported file types.
           Backend canvases should no longer write their own print_figure()